--- a/Home.html
+++ b/Home.html
@@ -1,29 +1,72 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
-  <head>
-    <meta charset="utf-8">
-    <!-- Responsive viewport meta tag -->
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <!-- CSS stylesheet -->
-    <link href="style.css" rel="stylesheet" type="text/css" media="screen" />
-    <title>Rebecca Malcolm Portfolio</title>
-  </head>
 
-  <body>
-    <div id="container" class="container-fluid">
-      <!-- Navigation -->
-      <ul id="nav">
-        <li><a href="Home.html">Home</a></li>
-      </ul>
+<head>
+  <meta charset="utf-8">
+  <!-- Responsive Viewport-->
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <!-- CSS Stylesheet -->
+  <link href="style.css" rel="stylesheet" type="text/css" media="screen" />
+  <title>Rebecca Malcolm Portfolio</title>
+</head>
 
-      <!-- Page Header -->
-      <div id="header" class="container-fluid">
-        <h1>Rebecca Malcolm</h1>
-        <h6> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. </h6>
-      </div>
+<body>
+  <div id="container" class="container-fluid">
+    <!-- Navigation -->
+    <ul id="nav">
+      <li><a href="Home.html">Home</a></li>
+      <li><a href="Home.html">About Me</a></li>
+      <li><a href="Home.html">Portfolio</a></li>
+      <li><a href="Home.html">Miscellaneous</a></li>
+      <li><a href="Home.html">Contact</a></li>
+    </ul>
 
-
-
+    <!-- Page Header -->
+    <div id="header">
+      <h1>Rebecca Malcolm</h1>
     </div>
-  </body>
+
+    <!-- Content -->
+    <div id="content">
+      <h2>Summary</h2>
+      <p> I am a second-year undergraduate at Northeastern University studying Computer Science, Game Design, and Japanese. My passions are creating and playing games and exploring front-end software development.</p>
+
+      <h3>My Recent Projects</h3>
+
+      <!-- Project Thumbnails -->
+      <h4>Games</h4>
+      <div class="portfolio-item">
+        <a href="#"><img src="" alt="View more info"></a>
+        <p class="btn"><a href="#">View Project</a></p>
+      </div>
+      <div class="portfolio-item">
+        <a href="#"><img src="" alt="View more info"></a>
+        <p class="btn"><a href="#">View Project</a></p>
+      </div>
+      <div class="portfolio-item">
+        <a href="#"><img src="" alt="View more info"></a>
+        <p class="btn"><a href="#">View Project</a></p>
+      </div>
+      <div class="portfolio-item">
+        <a href="#"><img src="" alt="View more info"></a>
+        <p class="btn"><a href="#">View Project</a></p>
+      </div>
+      <h4>Software</h4>
+      <div class="portfolio-item">
+        <a href="#"><img src="" alt="View more info"></a>
+        <p class="btn"><a href="#">View Project</a></p>
+      </div>
+      <div class="portfolio-item">
+        <a href="#"><img src="" alt="View more info"></a>
+        <p class="btn"><a href="#">View Project</a></p>
+      </div>
+    </div>
+
+    <!-- Page Footer -->
+    <div id="footer">
+      <p id="back-top"><a href="#">Back to Top</a></p>
+    </div>
+  </div>
+</body>
+
 </html>
