Added empty about me and contact pages

--- a/Home.html
+++ b/Home.html
@@ -18,9 +18,9 @@
 
   <!-- Navigation -->
   <div class="top-nav">
-      <a href="Home.html">Home</a>
-      <a href="Home.html">About Me</a>
-      <a href="Home.html">Contact</a>
+      <a href="home.html">Home</a>
+      <a href="home.html">About Me</a>
+      <a href="home.html">Contact</a>
   </div>
 
   <!-- Content -->
@@ -47,7 +47,7 @@
 
   <!-- Footer -->
   <div class="footer">
-    <p id="back-top"><a href="#">Back to Top</a></p>
+    <a href="home.html">Back to Top</a>
   </div>
 
 </body>
