Renamed home page file to index.html, modified contact and about me pages

--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
 
   <!-- Navigation -->
   <div class="top-nav">
-      <a href="home.html">Home</a>
-      <a href="home.html">About Me</a>
-      <a href="home.html">Contact</a>
+      <a href="index.html">Home</a>
+      <a href="about-me.html">About Me</a>
+      <a href="contact.html">Contact</a>
   </div>
 
   <!-- Content -->
@@ -47,7 +47,7 @@
 
   <!-- Footer -->
   <div class="footer">
-    <a href="home.html">Back to Top</a>
+    <a href="index.html">Back to Top</a>
   </div>
 
 </body>
