Added div to fill page height, css styling

--- a/about-me.html
+++ b/about-me.html
@@ -11,27 +11,29 @@
 </head>
 
 <body>
-  <!-- Header -->
-  <div class="header">
-    <h1>Rebecca Malcolm</h1>
-  </div>
+  <section class="fill-height">
+    <!-- Header -->
+    <div class="header">
+      <h1>Rebecca Malcolm</h1>
+    </div>
 
-  <!-- Navigation -->
-  <div class="top-nav">
+    <!-- Navigation -->
+    <div class="top-nav">
       <a href="index.html">Home</a>
       <a href="about-me.html">About Me</a>
       <a href="contact.html">Contact</a>
-  </div>
+    </div>
 
-  <!-- Content -->
-  <div class="content">
+    <!-- Content -->
+    <div class="content">
 
-  </div>
+    </div>
 
-  <!-- Footer -->
-  <div class="footer">
-    <a href="about-me.html">Back to Top</a>
-  </div>
+    <!-- Footer -->
+    <div class="footer">
+      <a href="about-me.html">Back to Top</a>
+    </div>
+  </section>
 
 </body>
 
