--- a/index.html
+++ b/index.html
@@ -11,44 +11,46 @@
 </head>
 
 <body>
-  <!-- Header -->
-  <div class="header">
-    <h1>Rebecca Malcolm</h1>
-  </div>
+  <section class="fill-height">
+    <!-- Header -->
+    <div class="header">
+      <h1>Rebecca Malcolm</h1>
+    </div>
 
-  <!-- Navigation -->
-  <div class="top-nav">
+    <!-- Navigation -->
+    <div class="top-nav">
       <a href="index.html">Home</a>
       <a href="about-me.html">About Me</a>
       <a href="contact.html">Contact</a>
-  </div>
-
-  <!-- Content -->
-  <div class="content">
-    <!-- Summary -->
-    <div class="summary">
-      <h3>Summary</h3>
-      <p> I am a second-year undergraduate at Northeastern University studying Computer Science, Game Design, and Japanese. My passions are creating and playing games and exploring front-end software development.</p>
     </div>
 
-    <div class="row">
-      <!-- Games Projects -->
-      <div class="column">
-        <h2 style="text-align:center;">Games</h2>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+    <!-- Content -->
+    <div class="content">
+      <!-- Summary -->
+      <div class="summary">
+        <h3>Summary</h3>
+        <p> I am a second-year undergraduate at Northeastern University studying Computer Science, Game Design, and Japanese. My passions are creating and playing games and exploring front-end software development.</p>
       </div>
-      <!-- Software Projects -->
-      <div class="column">
-        <h2 style="text-align:center;">Software</h2>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+
+      <div class="row">
+        <!-- Games Projects -->
+        <div class="column">
+          <h2 style="text-align:center;">Games</h2>
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+        </div>
+        <!-- Software Projects -->
+        <div class="column">
+          <h2 style="text-align:center;">Software</h2>
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+        </div>
       </div>
     </div>
-  </div>
 
-  <!-- Footer -->
-  <div class="footer">
-    <a href="index.html">Back to Top</a>
-  </div>
+    <!-- Footer -->
+    <div class="footer">
+      <a href="index.html">Back to Top</a>
+    </div>
+  </section>
 
 </body>
 
