Removed columns and section headers, transformed header to uppercase, added thumbnail with caption

--- a/about-me.html
+++ b/about-me.html
@@ -18,20 +18,20 @@
     </div>
 
     <!-- Navigation -->
-    <div class="top-nav">
-      <a href="index.html">Home</a>
-      <a href="about-me.html">About Me</a>
-      <a href="contact.html">Contact</a>
-    </div>
+    <ul class="top-nav">
+      <li><a href="index.html">Home</a></li>
+      <li><a href="about-me.html">About Me</a></li>
+      <li><a href="contact.html">Contact</a></li>
+    </ul>
 
     <!-- Content -->
     <div class="content">
-
+    
     </div>
 
     <!-- Footer -->
     <div class="footer">
-      <a href="about-me.html">Back to Top</a>
+      <a href="index.html">Back to Top</a>
     </div>
   </section>
 
