--- a/contact.html
+++ b/contact.html
@@ -18,11 +18,11 @@
     </div>
 
     <!-- Navigation -->
-    <div class="top-nav">
-      <a href="index.html">Home</a>
-      <a href="about-me.html">About Me</a>
-      <a href="contact.html">Contact</a>
-    </div>
+    <ul class="top-nav">
+      <li><a href="index.html">Home</a></li>
+      <li><a href="about-me.html">About Me</a></li>
+      <li><a href="contact.html">Contact</a></li>
+    </ul>
 
     <!-- Content -->
     <div class="content">
