(1) test responsive layout on mobile phone

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
         <div class="responsive">
           <div class="thumbnail">
-            <a target="_blank" href="#">
+            <a target="#" href="#">
               <img src="images/Team Jeoff!.jpg" width="600" height="400">
               <div class="caption">Add a description of the image here</div>
             </a>
