--- a/index.html
+++ b/index.html
@@ -36,6 +36,30 @@
             </a>
           </div>
         </div>
+        <div class="responsive">
+          <div class="thumbnail">
+            <a target="#" href="#">
+              <img src="images/Team Jeoff!.jpg" width="600" height="400">
+              <div class="caption">Add a description of the image here</div>
+            </a>
+          </div>
+        </div>
+        <div class="responsive">
+          <div class="thumbnail">
+            <a target="#" href="#">
+              <img src="images/Team Jeoff!.jpg" width="600" height="400">
+              <div class="caption">Add a description of the image here</div>
+            </a>
+          </div>
+        </div>
+        <div class="responsive">
+          <div class="thumbnail">
+            <a target="#" href="#">
+              <img src="images/Team Jeoff!.jpg" width="600" height="400">
+              <div class="caption">Add a description of the image here</div>
+            </a>
+          </div>
+        </div>
 
       </div>
 
