Adjusted thumbnail padding, added more thumbnails

--- a/index.html
+++ b/index.html
@@ -28,11 +28,15 @@
     <div class="content">
       <div class="row">
 
+        <!-- Projects -->
         <div class="responsive">
           <div class="thumbnail">
             <a target="#" href="#">
               <img src="images/Team Jeoff!.jpg" width="600" height="400">
-              <div class="caption">Add a description of the image here</div>
+              <div class="caption">
+                <h2>Project Title</h2>
+                <p>About this project!</p>
+              </div>
             </a>
           </div>
         </div>
@@ -40,7 +44,10 @@
           <div class="thumbnail">
             <a target="#" href="#">
               <img src="images/Team Jeoff!.jpg" width="600" height="400">
-              <div class="caption">Add a description of the image here</div>
+              <div class="caption">
+                <h2>Project Title</h2>
+                <p>About this project!</p>
+              </div>
             </a>
           </div>
         </div>
@@ -48,7 +55,10 @@
           <div class="thumbnail">
             <a target="#" href="#">
               <img src="images/Team Jeoff!.jpg" width="600" height="400">
-              <div class="caption">Add a description of the image here</div>
+              <div class="caption">
+                <h2>Project Title</h2>
+                <p>About this project!</p>
+              </div>
             </a>
           </div>
         </div>
@@ -56,7 +66,10 @@
           <div class="thumbnail">
             <a target="#" href="#">
               <img src="images/Team Jeoff!.jpg" width="600" height="400">
-              <div class="caption">Add a description of the image here</div>
+              <div class="caption">
+                <h2>Project Title</h2>
+                <p>About this project!</p>
+              </div>
             </a>
           </div>
         </div>
