--- a/index.html
+++ b/index.html
@@ -26,56 +26,91 @@
 
     <!-- Content -->
     <div class="content">
+      <!-- Projects -->
       <div class="row">
 
-        <!-- Projects -->
+        <!-- Sleepy Jeoff -->
         <div class="responsive">
           <div class="thumbnail">
-            <a target="#" href="#">
-              <img src="images/Team Jeoff!.jpg" width="600" height="400">
+            <a target="_blank" href="https://globalgamejam.org/2019/games/sleepy-jeoff">
+              <iframe src="https://www.youtube.com/embed/fsce3Lo1Sls" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
               <div class="caption">
-                <h2>Project Title</h2>
-                <p>About this project!</p>
+                <h2>Sleepy Jeoff</h2>
+                <p>A 2.5D game made with a team in Unity and C# over 48 hours!</p>
+              </div>
+            </a>
+          </div>
+        </div>
+
+        <!-- ??? -->
+        <div class="responsive">
+          <div class="thumbnail">
+            <a target="_blank" href="#">
+              <img src="images/sj-team-jeoff.jpg">
+              <div class="caption">
+                <h2>Sleepy Jeoff</h2>
+                <p>A 2.5D game made with a team in Unity and C# over 48 hours!</p>
               </div>
             </a>
           </div>
         </div>
         <div class="responsive">
           <div class="thumbnail">
-            <a target="#" href="#">
-              <img src="images/Team Jeoff!.jpg" width="600" height="400">
+            <a target="_blank" href="https://globalgamejam.org/2019/games/sleepy-jeoff">
+              <iframe src="https://www.youtube.com/embed/fsce3Lo1Sls" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
               <div class="caption">
-                <h2>Project Title</h2>
-                <p>About this project!</p>
+                <h2>Sleepy Jeoff</h2>
+                <p>A 2.5D game made with a team in Unity and C# over 48 hours!</p>
               </div>
             </a>
           </div>
         </div>
         <div class="responsive">
           <div class="thumbnail">
-            <a target="#" href="#">
-              <img src="images/Team Jeoff!.jpg" width="600" height="400">
+            <a target="_blank" href="#">
+              <img src="images/sj-team-jeoff.jpg">
               <div class="caption">
-                <h2>Project Title</h2>
-                <p>About this project!</p>
+                <h2>Sleepy Jeoff</h2>
+                <p>A 2.5D game made with a team in Unity and C# over 48 hours!</p>
               </div>
             </a>
           </div>
         </div>
         <div class="responsive">
           <div class="thumbnail">
-            <a target="#" href="#">
-              <img src="images/Team Jeoff!.jpg" width="600" height="400">
+            <a target="_blank" href="https://globalgamejam.org/2019/games/sleepy-jeoff">
+              <iframe src="https://www.youtube.com/embed/fsce3Lo1Sls" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
               <div class="caption">
-                <h2>Project Title</h2>
-                <p>About this project!</p>
+                <h2>Sleepy Jeoff</h2>
+                <p>A 2.5D game made with a team in Unity and C# over 48 hours!</p>
+              </div>
+            </a>
+          </div>
+        </div>
+        <div class="responsive">
+          <div class="thumbnail">
+            <a target="_blank" href="#">
+              <img src="images/sj-team-jeoff.jpg">
+              <div class="caption">
+                <h2>Sleepy Jeoff</h2>
+                <p>A 2.5D game made with a team in Unity and C# over 48 hours!</p>
+              </div>
+            </a>
+          </div>
+        </div>
+        <div class="responsive">
+          <div class="thumbnail">
+            <a target="_blank" href="https://globalgamejam.org/2019/games/sleepy-jeoff">
+              <iframe src="https://www.youtube.com/embed/fsce3Lo1Sls" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+              <div class="caption">
+                <h2>Sleepy Jeoff</h2>
+                <p>A 2.5D game made with a team in Unity and C# over 48 hours!</p>
               </div>
             </a>
           </div>
         </div>
 
       </div>
-
     </div>
 
     <!-- Footer -->
