Reformatted images in thumbnails using a frame div, testing for responsive mobile layout

--- a/index.html
+++ b/index.html
@@ -46,7 +46,9 @@
         <div class="responsive">
           <div class="thumbnail">
             <a target="_blank" href="#">
-              <img src="images/sj-team-jeoff.jpg">
+              <div class="frame">
+                <img src="images/sj-team-jeoff.jpg">
+              </div>
               <div class="caption">
                 <h2>Sleepy Jeoff</h2>
                 <p>A 2.5D game made with a team in Unity and C# over 48 hours!</p>
@@ -54,6 +56,7 @@
             </a>
           </div>
         </div>
+
         <div class="responsive">
           <div class="thumbnail">
             <a target="_blank" href="https://globalgamejam.org/2019/games/sleepy-jeoff">
