(1) testing new thumbnails for responsive mobile layout

--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
           </div>
         </div>
 
+
         <!-- ??? -->
         <div class="responsive">
           <div class="thumbnail">
@@ -56,7 +57,32 @@
             </a>
           </div>
         </div>
-
+        <div class="responsive">
+          <div class="thumbnail">
+            <a target="_blank" href="#">
+              <div class="frame">
+                <img src="images/sj-team-jeoff.jpg">
+              </div>
+              <div class="caption">
+                <h2>Sleepy Jeoff</h2>
+                <p>A 2.5D game made with a team in Unity and C# over 48 hours!</p>
+              </div>
+            </a>
+          </div>
+        </div>
+        <div class="responsive">
+          <div class="thumbnail">
+            <a target="_blank" href="#">
+              <div class="frame">
+                <img src="images/sj-team-jeoff.jpg">
+              </div>
+              <div class="caption">
+                <h2>Sleepy Jeoff</h2>
+                <p>A 2.5D game made with a team in Unity and C# over 48 hours!</p>
+              </div>
+            </a>
+          </div>
+        </div>
         <div class="responsive">
           <div class="thumbnail">
             <a target="_blank" href="https://globalgamejam.org/2019/games/sleepy-jeoff">
@@ -71,18 +97,9 @@
         <div class="responsive">
           <div class="thumbnail">
             <a target="_blank" href="#">
-              <img src="images/sj-team-jeoff.jpg">
-              <div class="caption">
-                <h2>Sleepy Jeoff</h2>
-                <p>A 2.5D game made with a team in Unity and C# over 48 hours!</p>
+              <div class="frame">
+                <img src="images/sj-team-jeoff.jpg">
               </div>
-            </a>
-          </div>
-        </div>
-        <div class="responsive">
-          <div class="thumbnail">
-            <a target="_blank" href="https://globalgamejam.org/2019/games/sleepy-jeoff">
-              <iframe src="https://www.youtube.com/embed/fsce3Lo1Sls" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
               <div class="caption">
                 <h2>Sleepy Jeoff</h2>
                 <p>A 2.5D game made with a team in Unity and C# over 48 hours!</p>
@@ -93,7 +110,9 @@
         <div class="responsive">
           <div class="thumbnail">
             <a target="_blank" href="#">
-              <img src="images/sj-team-jeoff.jpg">
+              <div class="frame">
+                <img src="images/sj-team-jeoff.jpg">
+              </div>
               <div class="caption">
                 <h2>Sleepy Jeoff</h2>
                 <p>A 2.5D game made with a team in Unity and C# over 48 hours!</p>
@@ -103,8 +122,10 @@
         </div>
         <div class="responsive">
           <div class="thumbnail">
-            <a target="_blank" href="https://globalgamejam.org/2019/games/sleepy-jeoff">
-              <iframe src="https://www.youtube.com/embed/fsce3Lo1Sls" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            <a target="_blank" href="#">
+              <div class="frame">
+                <img src="images/sj-team-jeoff.jpg">
+              </div>
               <div class="caption">
                 <h2>Sleepy Jeoff</h2>
                 <p>A 2.5D game made with a team in Unity and C# over 48 hours!</p>
