--- a/index.html
+++ b/index.html
@@ -33,7 +33,9 @@
         <div class="responsive">
           <div class="thumbnail">
             <a target="_blank" href="https://globalgamejam.org/2019/games/sleepy-jeoff">
-              <iframe src="https://www.youtube.com/embed/fsce3Lo1Sls" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+              <div class="video-frame">
+                <iframe src="https://www.youtube.com/embed/fsce3Lo1Sls" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+              </div>
               <div class="caption">
                 <h2>Sleepy Jeoff</h2>
                 <p>A 2.5D game made with a team in Unity and C# over 48 hours!</p>
@@ -41,13 +43,12 @@
             </a>
           </div>
         </div>
-
 
         <!-- ??? -->
         <div class="responsive">
           <div class="thumbnail">
             <a target="_blank" href="#">
-              <div class="frame">
+              <div class="image-frame">
                 <img src="images/sj-team-jeoff.jpg">
               </div>
               <div class="caption">
@@ -60,7 +61,7 @@
         <div class="responsive">
           <div class="thumbnail">
             <a target="_blank" href="#">
-              <div class="frame">
+              <div class="image-frame">
                 <img src="images/sj-team-jeoff.jpg">
               </div>
               <div class="caption">
@@ -73,7 +74,20 @@
         <div class="responsive">
           <div class="thumbnail">
             <a target="_blank" href="#">
-              <div class="frame">
+              <div class="image-frame">
+                <img src="images/sj-team-jeoff.jpg">
+              </div>
+              <div class="caption">
+                <h2>Sleepy Jeoff</h2>
+                <p>A 2.5D game made with a team in Unity and C# over 48 hours!</p>
+              </div>
+            </a>
+          </div>
+        </div>
+        <div class="responsive">
+          <div class="thumbnail">
+            <a target="_blank" href="#">
+              <div class="image-frame">
                 <img src="images/sj-team-jeoff.jpg">
               </div>
               <div class="caption">
@@ -86,19 +100,8 @@
         <div class="responsive">
           <div class="thumbnail">
             <a target="_blank" href="https://globalgamejam.org/2019/games/sleepy-jeoff">
-              <iframe src="https://www.youtube.com/embed/fsce3Lo1Sls" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-              <div class="caption">
-                <h2>Sleepy Jeoff</h2>
-                <p>A 2.5D game made with a team in Unity and C# over 48 hours!</p>
-              </div>
-            </a>
-          </div>
-        </div>
-        <div class="responsive">
-          <div class="thumbnail">
-            <a target="_blank" href="#">
-              <div class="frame">
-                <img src="images/sj-team-jeoff.jpg">
+              <div class="video-frame">
+                <iframe src="https://www.youtube.com/embed/fsce3Lo1Sls" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
               </div>
               <div class="caption">
                 <h2>Sleepy Jeoff</h2>
@@ -109,22 +112,9 @@
         </div>
         <div class="responsive">
           <div class="thumbnail">
-            <a target="_blank" href="#">
-              <div class="frame">
-                <img src="images/sj-team-jeoff.jpg">
-              </div>
-              <div class="caption">
-                <h2>Sleepy Jeoff</h2>
-                <p>A 2.5D game made with a team in Unity and C# over 48 hours!</p>
-              </div>
-            </a>
-          </div>
-        </div>
-        <div class="responsive">
-          <div class="thumbnail">
-            <a target="_blank" href="#">
-              <div class="frame">
-                <img src="images/sj-team-jeoff.jpg">
+            <a target="_blank" href="https://globalgamejam.org/2019/games/sleepy-jeoff">
+              <div class="video-frame">
+                <iframe src="https://www.youtube.com/embed/fsce3Lo1Sls" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
               </div>
               <div class="caption">
                 <h2>Sleepy Jeoff</h2>
