modified caption styling, test for repsonsive mobile layout

--- a/index.html
+++ b/index.html
@@ -38,13 +38,13 @@
               </div>
               <div class="caption">
                 <h2>Sleepy Jeoff</h2>
-                <p>A 2.5D game made with a team in Unity and C# over 48 hours!</p>
+                <p> I developed movement scripts using C# in Visual Studio and integrated all art, animation, and sound assets into the Unity scene. </p>
               </div>
             </a>
           </div>
         </div>
 
-        <!-- ??? -->
+        <!-- UnderSea Invaders -->
         <div class="responsive">
           <div class="thumbnail">
             <a target="_blank" href="#">
@@ -52,73 +52,8 @@
                 <img src="images/sj-team-jeoff.jpg">
               </div>
               <div class="caption">
-                <h2>Sleepy Jeoff</h2>
-                <p>A 2.5D game made with a team in Unity and C# over 48 hours!</p>
-              </div>
-            </a>
-          </div>
-        </div>
-        <div class="responsive">
-          <div class="thumbnail">
-            <a target="_blank" href="#">
-              <div class="image-frame">
-                <img src="images/sj-team-jeoff.jpg">
-              </div>
-              <div class="caption">
-                <h2>Sleepy Jeoff</h2>
-                <p>A 2.5D game made with a team in Unity and C# over 48 hours!</p>
-              </div>
-            </a>
-          </div>
-        </div>
-        <div class="responsive">
-          <div class="thumbnail">
-            <a target="_blank" href="#">
-              <div class="image-frame">
-                <img src="images/sj-team-jeoff.jpg">
-              </div>
-              <div class="caption">
-                <h2>Sleepy Jeoff</h2>
-                <p>A 2.5D game made with a team in Unity and C# over 48 hours!</p>
-              </div>
-            </a>
-          </div>
-        </div>
-        <div class="responsive">
-          <div class="thumbnail">
-            <a target="_blank" href="#">
-              <div class="image-frame">
-                <img src="images/sj-team-jeoff.jpg">
-              </div>
-              <div class="caption">
-                <h2>Sleepy Jeoff</h2>
-                <p>A 2.5D game made with a team in Unity and C# over 48 hours!</p>
-              </div>
-            </a>
-          </div>
-        </div>
-        <div class="responsive">
-          <div class="thumbnail">
-            <a target="_blank" href="https://globalgamejam.org/2019/games/sleepy-jeoff">
-              <div class="video-frame">
-                <iframe src="https://www.youtube.com/embed/fsce3Lo1Sls" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-              </div>
-              <div class="caption">
-                <h2>Sleepy Jeoff</h2>
-                <p>A 2.5D game made with a team in Unity and C# over 48 hours!</p>
-              </div>
-            </a>
-          </div>
-        </div>
-        <div class="responsive">
-          <div class="thumbnail">
-            <a target="_blank" href="https://globalgamejam.org/2019/games/sleepy-jeoff">
-              <div class="video-frame">
-                <iframe src="https://www.youtube.com/embed/fsce3Lo1Sls" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-              </div>
-              <div class="caption">
-                <h2>Sleepy Jeoff</h2>
-                <p>A 2.5D game made with a team in Unity and C# over 48 hours!</p>
+                <h2>UnderSea Invaders</h2>
+                <p>About this project!</p>
               </div>
             </a>
           </div>
