--- a/index.html
+++ b/index.html
@@ -29,6 +29,21 @@
       <!-- Projects -->
       <div class="row">
 
+        <!-- Personal Website -->
+        <div class="responsive">
+          <div class="thumbnail">
+            <a href="">
+              <div class="image-frame">
+                <img src="images/pw-home.png">
+              </div>
+              <div class="caption">
+                <h2>Personal Website</h2>
+                <p>Created using HTML and CSS in Atom.</p>
+              </div>
+            </a>
+          </div>
+        </div>
+
         <!-- Sleepy Jeoff -->
         <div class="responsive">
           <div class="thumbnail">
@@ -38,7 +53,22 @@
               </div>
               <div class="caption">
                 <h2>Sleepy Jeoff</h2>
-                <p> I developed movement scripts using C# in Visual Studio and integrated all art, animation, and sound assets into the Unity scene. </p>
+                <p> Developed movement scripts using C# in Visual Studio and integrated all art, animation, and sound assets into Unity.</p>
+              </div>
+            </a>
+          </div>
+        </div>
+
+        <!-- Mood2Food -->
+        <div class="responsive">
+          <div class="thumbnail">
+            <a target="_blank" href="https://devpost.com/software/mood2food-yr2iaq">
+              <div class="video-frame">
+                <iframe src="https://www.youtube.com/embed/-29yBuO8Wxs" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+              </div>
+              <div class="caption">
+                <h2>Mood2Food</h2>
+                <p> Modfied colors, fonts, and created recipe page layout using JavaScript in React Native.</p>
               </div>
             </a>
           </div>
@@ -47,13 +77,43 @@
         <!-- UnderSea Invaders -->
         <div class="responsive">
           <div class="thumbnail">
-            <a target="_blank" href="#">
+            <a href="#">
               <div class="image-frame">
-                <img src="images/sj-team-jeoff.jpg">
+                <img src="images/placeholder-image.png">
               </div>
               <div class="caption">
                 <h2>UnderSea Invaders</h2>
                 <p>About this project!</p>
+              </div>
+            </a>
+          </div>
+        </div>
+
+        <!-- Saving Jessica -->
+        <div class="responsive">
+          <div class="thumbnail">
+            <a target="_blank" href="https://docs.google.com/document/d/1HfJaMJLPox7EuDX4YHYjjkgpUUFgrTrxdYuse-v0w2Q/">
+              <div class="image-frame">
+                <img src="images/placeholder-image.png">
+              </div>
+              <div class="caption">
+                <h2>Saving Jessica</h2>
+                <p>Collaborated on escape room design, created, iterated, and playtested Smell puzzle.</p>
+              </div>
+            </a>
+          </div>
+        </div>
+
+        <!-- Melody of Memories -->
+        <div class="responsive">
+          <div class="thumbnail">
+            <a target="_blank" href="https://globalgamejam.org/2018/games/melody-memories">
+              <div class="image-frame">
+                <img src="images/mom-screenshot-1.png">
+              </div>
+              <div class="caption">
+                <h2>Melody of Memories</h2>
+                <p>Pitched an idea, managed production, and created art assets in Adobe Illustrator.</p>
               </div>
             </a>
           </div>
