--- a/contact.html
+++ b/contact.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <!-- CSS Stylesheet -->
   <link href="style.css" rel="stylesheet" type="text/css" media="screen" />
-  <title>Rebecca Malcolm Portfolio</title>
+  <title>Rebecca Malcolm - Contact</title>
 </head>
 
 <body>
