--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <!-- Header -->
     <div class="header">
       <h1>Rebecca Malcolm</h1>
+      <p>Aspiring Game Programmer</p>
     </div>
 
     <!-- Navigation -->
@@ -26,24 +27,8 @@
 
     <!-- Content -->
     <div class="content">
-      <!-- Projects -->
+      <h2 class="section-header">C++/C# and Unity</h2>
       <div class="row">
-
-        <!-- Personal Website -->
-        <div class="responsive">
-          <div class="thumbnail">
-            <a href="">
-              <div class="image-frame">
-                <img src="images/pw-home.png">
-              </div>
-              <div class="caption">
-                <h2>Personal Website</h2>
-                <p>Created using HTML and CSS in Atom.</p>
-              </div>
-            </a>
-          </div>
-        </div>
-
         <!-- Sleepy Jeoff -->
         <div class="responsive">
           <div class="thumbnail">
@@ -59,16 +44,16 @@
           </div>
         </div>
 
-        <!-- Mood2Food -->
+        <!-- 2D Platformer -->
         <div class="responsive">
           <div class="thumbnail">
-            <a target="_blank" href="https://devpost.com/software/mood2food-yr2iaq">
-              <div class="video-frame">
-                <iframe src="https://www.youtube.com/embed/-29yBuO8Wxs" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            <a href="#">
+              <div class="image-frame">
+                <img src="images/placeholder-image.png">
               </div>
               <div class="caption">
-                <h2>Mood2Food</h2>
-                <p> Modfied colors, fonts, and created recipe page layout using JavaScript in React Native.</p>
+                <h2>2D Platformer</h2>
+                <p>About this project!</p>
               </div>
             </a>
           </div>
@@ -88,21 +73,43 @@
             </a>
           </div>
         </div>
+      </div>
 
-        <!-- Saving Jessica -->
+      <h2 class="section-header">HTML, CSS, and JavaScript</h2>
+      <div class="row">
+        <!-- Personal Website -->
         <div class="responsive">
           <div class="thumbnail">
-            <a target="_blank" href="https://docs.google.com/document/d/1HfJaMJLPox7EuDX4YHYjjkgpUUFgrTrxdYuse-v0w2Q/">
+            <a href="">
               <div class="image-frame">
-                <img src="images/placeholder-image.png">
+                <img src="images/pw-home.png">
               </div>
               <div class="caption">
-                <h2>Saving Jessica</h2>
-                <p>Collaborated on escape room design, created, iterated, and playtested Smell puzzle.</p>
+                <h2>Personal Website</h2>
+                <p>Created using HTML and CSS in Atom.</p>
               </div>
             </a>
           </div>
         </div>
+
+        <!-- Mood2Food -->
+        <div class="responsive">
+          <div class="thumbnail">
+            <a target="_blank" href="https://devpost.com/software/mood2food-yr2iaq">
+              <div class="video-frame">
+                <iframe src="https://www.youtube.com/embed/-29yBuO8Wxs" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+              </div>
+              <div class="caption">
+                <h2>Mood2Food</h2>
+                <p> Modfied colors, fonts, and created recipe page layout using JavaScript in React Native.</p>
+              </div>
+            </a>
+          </div>
+        </div>
+      </div>
+
+      <h2 class="section-header">Game Design</h2>
+      <div class="row">
 
         <!-- Melody of Memories -->
         <div class="responsive">
@@ -118,7 +125,6 @@
             </a>
           </div>
         </div>
-
       </div>
     </div>
 
