modified row style, removed headers from about me and contact

--- a/about-me.html
+++ b/about-me.html
@@ -12,11 +12,6 @@
 
 <body>
   <section class="fill-height">
-    <!-- Header -->
-    <div class="header">
-      <h1>Rebecca Malcolm</h1>
-    </div>
-
     <!-- Navigation -->
     <ul class="top-nav">
       <li><a href="index.html">Home</a></li>
@@ -26,7 +21,10 @@
 
     <!-- Content -->
     <div class="content">
-
+      <h2 class="section-header">Hi, I'm Becca!</h2>
+      <div class="row">
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+      </div>
     </div>
 
     <!-- Footer -->
