created column div for about me page, added placeholder image and text

--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
               </div>
               <div class="caption">
                 <h2>Personal Website</h2>
-                <p>Created using HTML and CSS in Atom.</p>
+                <p>Built using HTML and CSS in Atom.</p>
               </div>
             </a>
           </div>
