Populated contact page, modified text styles

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
               </div>
               <div class="caption">
                 <h2>2D Platformer</h2>
-                <p>About this project!</p>
+                <p>Coming Soon!</p>
               </div>
             </a>
           </div>
@@ -68,7 +68,7 @@
               </div>
               <div class="caption">
                 <h2>UnderSea Invaders</h2>
-                <p>About this project!</p>
+                <p>Coming Soon!</p>
               </div>
             </a>
           </div>
