--- a/contact.html
+++ b/contact.html
@@ -21,7 +21,11 @@
 
     <!-- Content -->
     <div class="content">
-
+      <h3 class="section-header">This page is under construction!</h3>
+      <div class="row" style="flex-direction:column;font-size:24px;">
+          <p>Email: malcolm.r@husky.neu.edu</p>
+          <a target="_blank" href="https://www.linkedin.com/in/rebecca-malcolm/">Linked-in</a>
+      </div>
     </div>
 
     <!-- Footer -->
