--- a/about-me.html
+++ b/about-me.html
@@ -29,7 +29,7 @@
           </div>
         </div>
         <div class="column">
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. </p>
+          <p style="text-align:center;">Coming Soon!</p>
         </div>
       </div>
     </div>
