added resume page, embedded PSF, social media icons, populated contact page, styling

--- a/resume.html
+++ b/resume.html
@@ -9,7 +9,7 @@
   <link href="style.css" rel="stylesheet" type="text/css" media="screen" />
   <!-- Social Media Icons CSS Stylesheet -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-  <title>Rebecca Malcolm - Contact</title>
+  <title>Rebecca Malcolm - Resume</title>
 </head>
 
 <body>
@@ -25,15 +25,13 @@
     <!-- Content -->
     <div class="content">
       <div class="row">
-        <a href="mailto:malcolm.r@husky.neu.edu" class="fa fa-envelope"></a>
-        <a href="https://www.linkedin.com/in/rebecca-malcolm/" class="fa fa-linkedin"></a>
-        <a href="skype:jinxcat99?userinfo" class="fa fa-skype"></a>
+        <embed src="documents/rebecca-malcolm-02-2019.pdf" type="application/pdf" width="100%" height="600px"/>
       </div>
     </div>
 
     <!-- Footer -->
     <div class="footer">
-      <a href="contact.html">Back to Top</a>
+      <a href="resume.html">Back to Top</a>
     </div>
   </section>
 
