--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
     <ul class="top-nav">
       <li><a href="index.html">Home</a></li>
       <li><a href="about-me.html">About Me</a></li>
+      <li><a href="resume.html">Resume</a></li>
       <li><a href="contact.html">Contact</a></li>
     </ul>
 
