--- a/resume.html
+++ b/resume.html
@@ -25,7 +25,10 @@
     <!-- Content -->
     <div class="content">
       <div class="row">
-        <embed src="documents/rebecca-malcolm-02-2019.pdf" type="application/pdf" width="100%" height="600px"/>
+        <object data="documents/rebecca-malcolm-02-2019.pdf" type="application/pdf" width="100%" height="600px">
+          <iframe src="https://docs.google.com/viewer?url=http://malcolmbec.github.io/rebecca-malcolm-02-2019.pdf&embedded=true" frameborder="0" width="100%" height="600px"></iframe>
+          <p>Your browser does not support PDFs! Download here:</p>
+        </object>
       </div>
     </div>
 
