--- a/resume.html
+++ b/resume.html
@@ -25,7 +25,9 @@
     <!-- Content -->
     <div class="content">
       <div class="row">
+        <!-- PDF Viewer -->
         <object data="documents/rebecca-malcolm-02-2019.pdf" type="application/pdf" width="100%" height="600px">
+          <!-- Google PDF Viewer for Google Chrome on Android -->
           <iframe src="https://docs.google.com/viewer?url=http://malcolmbec.github.io/documents/rebecca-malcolm-02-2019.pdf&embedded=true" frameborder="0" width="100%" height="300px"></iframe>
         </object>
       </div>
