--- a/contact.html
+++ b/contact.html
@@ -26,7 +26,7 @@
     <div class="content">
       <div class="row">
         <a href="mailto:malcolm.r@husky.neu.edu" class="fa fa-envelope"></a>
-        <a href="https://www.linkedin.com/in/rebecca-malcolm/" class="fa fa-linkedin"></a>
+        <a target="_blank" href="https://www.linkedin.com/in/rebecca-malcolm/" class="fa fa-linkedin"></a>
         <a href="skype:jinxcat99?userinfo" class="fa fa-skype"></a>
       </div>
     </div>
