added project, fixed link on about me page

--- a/about-me.html
+++ b/about-me.html
@@ -39,7 +39,7 @@
 
     <!-- Footer -->
     <div class="footer">
-      <a href="index.html">Back to Top</a>
+      <a href="about-me.html">Back to Top</a>
     </div>
   </section>
 
