--- a/index.html
+++ b/index.html
@@ -45,6 +45,21 @@
           </div>
         </div>
 
+        <!-- This Is Supposed to Be a Square -->
+        <div class="responsive">
+          <div class="thumbnail">
+            <a target="_blank" href="https://thisissupposedtobeasquare.github.io/">
+              <div class="image-frame">
+                <img src="images/placeholder-image.png">
+              </div>
+              <div class="caption">
+                <h3>This Is Supposed to Be a Square</h3>
+                <p>Co-authored script in C# for manipulating a 4D tesseract in 3D VR space.</p>
+              </div>
+            </a>
+          </div>
+        </div>
+
         <!-- 2D Platformer -->
         <div class="responsive">
           <div class="thumbnail">
@@ -54,7 +69,7 @@
               </div>
               <div class="caption">
                 <h2>2D Platformer</h2>
-                <p>Coming Soon!</p>
+                <p>Imported free art assets and wrote scripts for player, camera, inventory, and UI.</p>
               </div>
             </a>
           </div>
@@ -69,7 +84,7 @@
               </div>
               <div class="caption">
                 <h2>UnderSea Invaders</h2>
-                <p>Coming Soon!</p>
+                <p>Scripted enemy behavior and projectiles in C++ using the SDL library.</p>
               </div>
             </a>
           </div>
