added text styling

--- a/contact.html
+++ b/contact.html
@@ -24,6 +24,7 @@
 
     <!-- Content -->
     <div class="content">
+      <p id="contact">Please feel free to contact me on the following platforms!</p>
       <div class="row">
         <a href="mailto:malcolm.r@husky.neu.edu" class="fa fa-envelope"></a>
         <a target="_blank" href="https://www.linkedin.com/in/rebecca-malcolm/" class="fa fa-linkedin"></a>
