edited project details

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
               </div>
               <div class="caption">
                 <h3>This Is Supposed to Be a Square</h3>
-                <p>Co-authored script in C# for manipulating a 4D tesseract in 3D VR space.</p>
+                <p>Co-developed a script in C# for manipulating a 4D tesseract in 3D VR space.</p>
               </div>
             </a>
           </div>
