--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
               </div>
               <div class="caption">
                 <h3>This Is Supposed to Be a Square</h3>
-                <p>Co-developed a script in C# for projecting a 4D tesseract into a 3D VR environment.</p>
+                <p>Co-developed a script in C# for projecting a 4D tesseract into 3D VR space.</p>
               </div>
             </a>
           </div>
