--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <!-- Header -->
     <div class="header">
       <h1>Rebecca Malcolm</h1>
-      <p>Aspiring Game Programmer</p>
+      <p>Game and Software Developer</p>
     </div>
 
     <!-- Navigation -->
@@ -39,7 +39,7 @@
               </div>
               <div class="caption">
                 <h2>Sleepy Jeoff</h2>
-                <p> Developed movement scripts using C# in Visual Studio and integrated all art, animation, and sound assets into Unity.</p>
+                <p>Developed character controllers in C# and integrated art and animation into Unity.</p>
               </div>
             </a>
           </div>
@@ -54,7 +54,7 @@
               </div>
               <div class="caption">
                 <h3>This Is Supposed to Be a Square</h3>
-                <p>Co-developed a script in C# for projecting a 4D tesseract into 3D VR space.</p>
+                <p>Co-developed a script in C# for projecting a hypercube into a 3D VR environment.</p>
               </div>
             </a>
           </div>
@@ -69,7 +69,7 @@
               </div>
               <div class="caption">
                 <h2>2D Platformer</h2>
-                <p>Imported free art assets and wrote scripts for player, camera, inventory, and UI.</p>
+                <p>Imported public art assets and created scripts in C# for player, camera, inventory, and UI.</p>
               </div>
             </a>
           </div>
@@ -84,7 +84,7 @@
               </div>
               <div class="caption">
                 <h2>UnderSea Invaders</h2>
-                <p>Scripted enemy behavior and projectiles in C++ using the SDL library.</p>
+                <p>Created scripts in C++ for enemy behavior and projectiles using the SDL library.</p>
               </div>
             </a>
           </div>
@@ -102,7 +102,7 @@
               </div>
               <div class="caption">
                 <h2>Personal Website</h2>
-                <p>Built using HTML and CSS in Atom.</p>
+                <p>Developed in Atom using HTML, CSS and the Font Awesome CSS toolkit for icons.</p>
               </div>
             </a>
           </div>
