--- a/projects.html
+++ b/projects.html
@@ -7,9 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <!-- CSS Stylesheet -->
   <link href="style.css" rel="stylesheet" type="text/css" media="screen" />
-  <!-- Social Media Icons CSS Stylesheet -->
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-  <title>Rebecca Malcolm - Resume</title>
+  <title>Rebecca Malcolm - Projects</title>
 </head>
 
 <body>
@@ -18,24 +16,20 @@
     <ul class="top-nav">
       <li><a href="index.html">Home</a></li>
       <li><a href="about-me.html">About Me</a></li>
+      <li><a href="projects.html">Projects</a></li>
       <li><a href="resume.html">Resume</a></li>
       <li><a href="contact.html">Contact</a></li>
     </ul>
 
     <!-- Content -->
     <div class="content">
-      <div class="row">
-        <!-- PDF Viewer -->
-        <object data="documents/rebecca-malcolm-02-2019.pdf#zoom=50%" type="application/pdf" width="100%" height="600px">
-          <!-- Google PDF Viewer for Google Chrome on Android -->
-          <iframe src="https://docs.google.com/viewer?url=http://malcolmbec.github.io/documents/rebecca-malcolm-02-2019.pdf&embedded=true" frameborder="0" width="100%" height="300px"></iframe>
-        </object>
-      </div>
+      <p id="message">Coming Soon!</p>
+      <!-- TODO -->
     </div>
 
     <!-- Footer -->
     <div class="footer">
-      <a href="resume.html">Back to Top</a>
+      <a href="projects.html">Back to Top</a>
     </div>
   </section>
 
