added project queen of swords

--- a/index.html
+++ b/index.html
@@ -45,22 +45,22 @@
           </div>
         </div>
 
-        <!-- This Is Supposed to Be a Square -->
+        <!-- Queen of Swords -->
         <div class="responsive">
           <div class="thumbnail">
             <a target="_blank" href="https://thisissupposedtobeasquare.github.io/">
               <div class="image-frame">
-                <img src="images/placeholder-image.png">
+                <img src="images/queen-of-swords.png">
               </div>
               <div class="caption">
-                <h3>This Is Supposed to Be a Square</h3>
-                <p>Co-developed a script in C# for projecting a hypercube into a 3D VR environment.</p>
+                <h3>Queen of Swords</h3>
+                <p>Programmed scene transitions, player death splash screens, and designed levels using layered tile maps.</p>
               </div>
             </a>
           </div>
         </div>
 
-        <!-- 2D Platformer -->
+        <!-- ?? -->
         <div class="responsive">
           <div class="thumbnail">
             <a href="#">
