update about me

--- a/about-me.html
+++ b/about-me.html
@@ -31,8 +31,8 @@
         </div>
         <div class="column">
           <h3 id="bio">Game. Design. Development.</h3>
-          <p>Ask me about my projects! My weekends are kept pretty busy with game jams, hackathons, and independent side quests. My favorite project so far has to be Sleepy Jeoff from Global Game Jam 2019! Our artist team was amazing and having only two programmers meant I learned a lot about a variety of features in Unity.</p>
-          <p>I grew up in suburban MA with family across New England. I was co-president of my high school's NERD club and grew up playing XBox with my dad. Now, I'm a CS student at Northeastern, minoring in Japanese and Game Design. You can find me at NU Game Dev Club and NU Women in Tech!</p>
+          <p>Ask me about my projects! My weekends are kept pretty busy with game jams, hackathons, and side quests. My favorite completed project is Sleepy Jeoff from Global Game Jam 2019! Our artist team was amazing and having only two programmers meant I learned a lot in a short time.</p>
+          <p>I grew up in suburban MA with family across New England. I was co-president of my high school's NERD club and I'm now Social Chair for the Northeastern Game Development Club. Recently, I've been playing a lot of story-driven action-adventure games. I am a 3rd-year Computer Science student, minoring in Game Design!</p>
         </div>
       </div>
     </div>
