update home page

--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
 
     <!-- Content -->
     <div class="content">
+      <p> Hello! Projects on this page may be slightly out of date since I am working on a new portfolio. Thank you!</p>
       <h2 class="section-header">C++/C# and Unity</h2>
       <div class="row">
         <!-- Sleepy Jeoff -->
@@ -108,7 +109,8 @@
           </div>
         </div>
       </div>
-
+      
+    <br>
     <!-- Footer -->
     <div class="footer">
       <a href="index.html">Back to Top</a>
