--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
     <!-- Content -->
     <div class="content">
-      <h4> Hello! Projects on this page may be slightly out of date since I am working on a new portfolio. Thank you!</h4>
+      <h4 style="text-align:center"> Hello! Projects on this page may be slightly out of date since I am working on a new portfolio. Thank you!</h4>
       <h2 class="section-header">C++/C# and Unity</h2>
       <div class="row">
         <!-- Sleepy Jeoff -->
