--- a/contact.html
+++ b/contact.html
@@ -28,7 +28,7 @@
       <div class="row">
         <a href="mailto:malcolm.r@husky.neu.edu" class="fa fa-envelope"></a>
         <a target="_blank" href="https://www.linkedin.com/in/rebecca-malcolm/" class="fa fa-linkedin"></a>
-        <a href="https://twitter.com/rebkgames" class="fa fa-twitter-square"></a>
+        <a href="https://twitter.com/rebkgames" class="fa fa-twitter"></a>
       </div>
     </div>
 
