fix link for queen of swords

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         <!-- Queen of Swords -->
         <div class="responsive">
           <div class="thumbnail">
-            <a target="_blank" href="https://thisissupposedtobeasquare.github.io/">
+            <a target="_blank" href="https://codejunkiestudios.itch.io/queen-of-swords">
               <div class="image-frame">
                 <img src="images/queen-of-swords.png">
               </div>
